--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ metaflow
 ruamel.yaml==0.18.6
 numpy==1.26.4
 pandas==2.2.2
-pyarrow
+pyarrow==16.1.0
 matplotlib==3.9.0
 seaborn==0.13.2
 scikit-learn==1.5.0
@@ -10,3 +10,4 @@ tensorflow==2.16.1
 xgboost==2.0.3
 notebook==7.2.0
 jupyterlab==4.2.0
+fastapi==0.111.0
