--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 metaflow
-ruamel.yaml==0.18.6
+pre-commit
 numpy==1.26.4
 pandas==2.2.2
 pyarrow==16.1.0
 matplotlib==3.9.0
 seaborn==0.13.2
 scikit-learn==1.5.0
-tensorflow==2.16.1
-xgboost==2.0.3
+torch==2.2.2
 notebook==7.2.0
 jupyterlab==4.2.0
 fastapi==0.111.0
