--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,9 +13,9 @@ repos:
     rev: 24.4.2
     hooks:
      - id: black
-       args: [--line-length=88]
+       args: [--line-length=80]
      - id: black-jupyter
-       args: [--line-length=88]
+       args: [--line-length=80]
 
 -   repo: https://github.com/hakancelikdev/unimport.git
     rev: 1.2.1
@@ -26,7 +26,7 @@ repos:
     rev: 7.0.0
     hooks:
       - id: flake8
-        args: [--max-line-length=88, --ignore=E203]
+        args: [--max-line-length=80, --ignore=E203, --ignore=W503]
 
 -   repo: https://github.com/pycqa/pylint
     rev: v3.1.0
